src/Components/About/About.css
.about-container {
    width: 80%;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.about-image {
    min-width: 360px;
}

.about-header {
    align-self: center;
}

.currently-list {
    text-align: center;
}

.about-body {
    white-space: pre-wrap;
}

@media screen and (max-width: 730px) {
    .about-container {
        width: 96%;
    }
}

